--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "astro": "^2.1.5",
     "fuse.js": "^6.6.2",
     "github-slugger": "^2.0.0",
+    "microcms-js-sdk": "^2.3.2",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^8.0.1",
     "satori": "^0.4.3",
+    "swr": "^2.1.2",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
