--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "tailwindcss": "^3.2.7"
     },
     "devDependencies": {
+        "@astrojs/partytown": "^1.2.0",
         "@astrojs/react": "^2.1.0",
         "@astrojs/sitemap": "^1.2.1",
         "@astrojs/tailwind": "^3.1.1",
