--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
         "@astrojs/mdx": "^0.18.4",
         "@astrojs/rss": "^2.3.2",
         "@resvg/resvg-js": "^2.4.1",
+        "@resvg/resvg-wasm": "^2.4.1",
         "astro": "^2.2.3",
-        "fuse.js": "^6.6.2",
         "microcms-js-sdk": "^2.3.3",
         "remark-collapse": "^0.1.2",
         "remark-toc": "^8.0.1",
         "satori": "^0.4.8",
+        "sharp": "^0.32.0",
         "swr": "^2.1.3",
         "tailwindcss": "^3.3.1"
     },
