--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "@astrojs/mdx": "^0.18.4",
         "@astrojs/rss": "^2.3.2",
         "astro": "^2.2.3",
+        "cheerio": "1.0.0-rc.12",
+        "highlight.js": "^11.7.0",
         "microcms-js-sdk": "^2.3.3",
         "remark-collapse": "^0.1.2",
         "remark-toc": "^8.0.1",
