add work, add @astro/image

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "lint": "eslint ."
     },
     "dependencies": {
+        "@astrojs/image": "^0.16.6",
         "@astrojs/mdx": "^0.18.4",
         "@astrojs/rss": "^2.3.2",
         "astro": "^2.2.3",
