--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
     "extends": "astro/tsconfigs/strict",
     "compilerOptions": {
         "baseUrl": "src",
+        // Replace `astro/client` with `@astrojs/image/client`
+        "types": ["@astrojs/image/client"],
         "paths": {
             "@assets/*": [
                 "assets/*"
