--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "dependencies": {
         "@astrojs/mdx": "^0.18.4",
         "@astrojs/rss": "^2.3.2",
+        "@react-three/cannon": "^6.5.2",
+        "@react-three/drei": "^9.66.0",
+        "@react-three/fiber": "^8.12.2",
         "astro": "^2.2.3",
         "cheerio": "1.0.0-rc.12",
         "highlight.js": "^11.7.0",
@@ -26,7 +29,9 @@
         "satori": "^0.4.8",
         "sharp": "^0.31.3",
         "swr": "^2.1.3",
-        "tailwindcss": "^3.3.1"
+        "tailwindcss": "^3.3.1",
+        "three": "^0.151.3",
+        "three-stdlib": "^2.21.9"
     },
     "devDependencies": {
         "@astrojs/partytown": "^1.2.0",
@@ -36,6 +41,7 @@
         "@divriots/jampack": "^0.9.4",
         "@tailwindcss/typography": "^0.5.9",
         "@types/react": "^18.0.35",
+        "@types/three": "^0.150.2",
         "@typescript-eslint/parser": "^5.58.0",
         "astro-eslint-parser": "^0.13.3",
         "commitizen": "^4.3.0",
