GLリファクタ！！！

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,9 @@
             ],
             "@utils/*": [
                 "utils/*"
+            ],
+            "@hooks/*": [
+                "hooks/*"
             ]
         }
     }
