--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "astro": "^2.2.3",
         "cheerio": "1.0.0-rc.12",
         "highlight.js": "^11.7.0",
+        "immer": "^10.0.1",
         "microcms-js-sdk": "^2.3.3",
         "remark-collapse": "^0.1.2",
         "remark-toc": "^8.0.1",
@@ -31,7 +32,8 @@
         "swr": "^2.1.3",
         "tailwindcss": "^3.3.1",
         "three": "^0.151.3",
-        "three-stdlib": "^2.21.9"
+        "three-stdlib": "^2.21.9",
+        "zustand": "^4.3.7"
     },
     "devDependencies": {
         "@astrojs/partytown": "^1.2.0",
