--- a/package.json
+++ b/package.json
@@ -15,45 +15,46 @@
         "lint": "eslint ."
     },
     "dependencies": {
-        "@astrojs/mdx": "^0.18.4",
-        "@astrojs/rss": "^2.3.2",
+        "@astrojs/mdx": "^0.19.0",
+        "@astrojs/rss": "^2.4.1",
         "@react-three/cannon": "^6.5.2",
-        "@react-three/drei": "^9.66.0",
-        "@react-three/fiber": "^8.12.2",
-        "astro": "^2.2.3",
+        "@react-three/drei": "^9.66.1",
+        "@react-three/fiber": "^8.13.0",
+        "astro": "^2.3.4",
         "cheerio": "1.0.0-rc.12",
-        "highlight.js": "^11.7.0",
+        "github-slugger": "^2.0.0",
+        "highlight.js": "^11.8.0",
         "immer": "^10.0.1",
         "microcms-js-sdk": "^2.3.3",
         "remark-collapse": "^0.1.2",
         "remark-toc": "^8.0.1",
-        "satori": "^0.4.8",
-        "sharp": "^0.31.3",
-        "swr": "^2.1.3",
-        "tailwindcss": "^3.3.1",
-        "three": "^0.151.3",
-        "three-stdlib": "^2.21.9",
+        "satori": "^0.7.3",
+        "sharp": "^0.32.1",
+        "swr": "^2.1.5",
+        "tailwindcss": "^3.3.2",
+        "three": "^0.152.2",
+        "three-stdlib": "^2.21.10",
         "zustand": "^4.3.7"
     },
     "devDependencies": {
         "@astrojs/partytown": "^1.2.0",
-        "@astrojs/react": "^2.1.1",
+        "@astrojs/react": "^2.1.2",
         "@astrojs/sitemap": "^1.2.2",
-        "@astrojs/tailwind": "^3.1.1",
+        "@astrojs/tailwind": "^3.1.2",
         "@divriots/jampack": "^0.9.4",
         "@tailwindcss/typography": "^0.5.9",
-        "@types/react": "^18.0.35",
-        "@types/three": "^0.150.2",
-        "@typescript-eslint/parser": "^5.58.0",
+        "@types/react": "^18.2.0",
+        "@types/three": "^0.151.0",
+        "@typescript-eslint/parser": "^5.59.2",
         "astro-eslint-parser": "^0.13.3",
         "commitizen": "^4.3.0",
         "cz-conventional-changelog": "^3.3.0",
-        "eslint": "^8.38.0",
+        "eslint": "^8.39.0",
         "eslint-plugin-astro": "^0.26.1",
         "husky": "^8.0.3",
-        "lint-staged": "^13.2.1",
-        "prettier": "^2.8.7",
-        "prettier-plugin-tailwindcss": "^0.2.7",
+        "lint-staged": "^13.2.2",
+        "prettier": "^2.8.8",
+        "prettier-plugin-tailwindcss": "^0.2.8",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
